--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
+  
+  <footer style="text-align:center; padding:10px;">
+    <p>© 2025 EDESUR Smart Grid</p>
+  </footer>
+  
   <body>
     <nav class="sidebar">
       <div class="logo-container">
