Agregué título principal visible para bienvenida

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+
+    <h1 style="text-align:center; color:#0077cc;">Bienvenido al Sistema Smart Grid de EDESUR</h1>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EDESUR - Sistema Smart Grid</title>
@@ -9,6 +12,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    
   </head>
   
   <footer style="text-align:center; padding:10px;">
