--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 
     <h1 style="text-align:center; color:#0077cc;">Bienvenido al Sistema Smart Grid de EDESUR</h1>
+    <link rel="icon" href="edesur.png" type="image/png">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
