Agregué alerta simulada como parte del contenido de prueba

--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
 
       <section id="alertasActivas" class="content-section">
         <h2>Alertas Activas</h2>
-        <div class="alert-panel">
+        <div class="alert-panel">  
           <div class="alert-item critical">
             <strong>Sobrecalentamiento en Transformador T-45</strong>
             <p>Zona Norte - Nivel crítico</p>
-          </div>
+          </div>       
           <div class="alert-item warning">
             <strong>Fluctuación de voltaje en Línea 12B</strong>
             <p>Sector Industrial - 15% variación</p>
           </div>
           <div class="alert-item info">
-            <strong>Mantenimiento Programado</strong>
-            <p>Subestación Central - 15/03/2025</p>
+            <strong>Simulación: Prueba de alerta educativa</strong>
+            <p>Esta es una alerta simulada para fines de desarrollo</p>
           </div>
         </div>
       </section>
