Agregué descripción para la sección de alertas activas

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
           <div class="alert-item info">
             <strong>Simulación: Prueba de alerta educativa</strong>
-            <p>Esta es una alerta simulada para fines de desarrollo</p>
+            <p>Estas son las alertas que el sistema detecta automáticamente por nivel de criticidad.</p>
           </div>
         </div>
       </section>
