--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EDESUR - Sistema Smart Grid</title>
+    <title>EDESUR – Sistema Smart Grid</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
